tests/baselines/reference/mergedClassWithNamespacePrototype.errors.txt
/b.ts(2,15): error TS2300: Duplicate identifier 'prototype'.


==== /a.d.ts (0 errors) ====
    declare class Foo {}
    
==== /b.ts (1 errors) ====
    declare namespace Foo {
        namespace prototype {
                  ~~~~~~~~~
!!! error TS2300: Duplicate identifier 'prototype'.
            function f(): void;
        }
    }
    